# wayland-sycl-client

./: CMakeLists.txt  main.cc
